--- a/_includes/posts.html
+++ b/_includes/posts.html
@@ -4,7 +4,7 @@
   
   <li>
   
-  <a href="{{ post.url }}">{{ post.title }}</a>
+  {{ post.date | date_to_string }} - <a href="{{ post.url }}">{{ post.title }}</a>
   
   {{ post.excerpt }}
   
